@@ -3,13 +3,22 @@ package com.redhat.service.smartevents.manager.api.user.validators.processors;
 import java.lang.annotation.Annotation;
 import java.util.Collections;
 import java.util.Map;
+import java.util.function.Function;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
+import javax.validation.MessageInterpolator;
 
 import org.hibernate.validator.constraintvalidation.HibernateConstraintValidatorContext;
+import org.hibernate.validator.internal.engine.MessageInterpolatorContext;
 import org.hibernate.validator.internal.engine.messageinterpolation.util.InterpolationHelper;
+import org.hibernate.validator.messageinterpolation.ExpressionLanguageFeatureLevel;
+import org.hibernate.validator.messageinterpolation.ParameterMessageInterpolator;
 
+import com.redhat.service.smartevents.infra.exceptions.definitions.user.ExternalUserException;
+import com.redhat.service.smartevents.infra.exceptions.definitions.user.ProcessorGatewayParametersMissingException;
+import com.redhat.service.smartevents.infra.exceptions.definitions.user.ProcessorGatewayUnclassifiedException;
+import com.redhat.service.smartevents.infra.exceptions.definitions.user.ProcessorMissingGatewayException;
 import com.redhat.service.smartevents.infra.models.gateways.Gateway;
 import com.redhat.service.smartevents.infra.validations.ValidationResult;
 import com.redhat.service.smartevents.processor.GatewayConfigurator;
@@ -18,9 +27,7 @@ import com.redhat.service.smartevents.processor.validators.GatewayValidator;
 abstract class BaseGatewayConstraintValidator<A extends Annotation, T> implements ConstraintValidator<A, T> {
 
     static final String GATEWAY_TYPE_MISSING_ERROR = "{gatewayClass} type must be specified";
-    static final String GATEWAY_TYPE_NOT_RECOGNISED_ERROR = "{gatewayClass} of type '{type}' is not recognised.";
     static final String GATEWAY_PARAMETERS_MISSING_ERROR = "{gatewayClass} parameters must be supplied";
-    static final String GATEWAY_PARAMETERS_NOT_VALID_ERROR = "Parameters for {gatewayClass} '{name}' of type '{type}' are not valid.";
 
     static final String GATEWAY_CLASS_PARAM = "gatewayClass";
     static final String TYPE_PARAM = "type";
@@ -38,13 +45,15 @@ abstract class BaseGatewayConstraintValidator<A extends Annotation, T> implement
     protected boolean isValidGateway(Gateway gateway, ConstraintValidatorContext context) {
         if (gateway.getType() == null) {
             addConstraintViolation(context, GATEWAY_TYPE_MISSING_ERROR,
-                    Collections.singletonMap(GATEWAY_CLASS_PARAM, gateway.getClass().getSimpleName()));
+                    Collections.singletonMap(GATEWAY_CLASS_PARAM, gateway.getClass().getSimpleName()),
+                    ProcessorMissingGatewayException::new);
             return false;
         }
 
         if (gateway.getParameters() == null) {
             addConstraintViolation(context, GATEWAY_PARAMETERS_MISSING_ERROR,
-                    Collections.singletonMap(GATEWAY_CLASS_PARAM, gateway.getClass().getSimpleName()));
+                    Collections.singletonMap(GATEWAY_CLASS_PARAM, gateway.getClass().getSimpleName()),
+                    ProcessorGatewayParametersMissingException::new);
             return false;
         }
 
@@ -52,24 +61,41 @@ abstract class BaseGatewayConstraintValidator<A extends Annotation, T> implement
         ValidationResult v = validator.isValid(gateway);
 
         if (!v.isValid()) {
-            String message = v.getMessage();
-            if (message == null) {
-                addConstraintViolation(context, GATEWAY_PARAMETERS_NOT_VALID_ERROR,
-                        Map.of(GATEWAY_CLASS_PARAM, gateway.getClass().getSimpleName(), TYPE_PARAM, gateway.getType()));
-            } else {
-                addConstraintViolation(context, InterpolationHelper.escapeMessageParameter(message), Collections.emptyMap());
+            for (ValidationResult.Violation violation : v.getViolations()) {
+                addConstraintViolation(context,
+                        InterpolationHelper.escapeMessageParameter(violation.getException().getMessage()),
+                        Collections.emptyMap(),
+                        ProcessorGatewayUnclassifiedException::new);
             }
         }
 
         return v.isValid();
     }
 
-    protected static void addConstraintViolation(ConstraintValidatorContext context, String message, Map<String, Object> messageParams) {
+    protected static void addConstraintViolation(ConstraintValidatorContext context,
+            String message,
+            Map<String, Object> messageParams,
+            Function<String, ExternalUserException> userExceptionSupplier) {
         context.disableDefaultConstraintViolation();
+        HibernateConstraintValidatorContext hibernateContext = context.unwrap(HibernateConstraintValidatorContext.class);
+        hibernateContext.withDynamicPayload(userExceptionSupplier.apply(interpolateMessage(message, messageParams)));
+
         if (!messageParams.isEmpty()) {
-            HibernateConstraintValidatorContext hibernateContext = context.unwrap(HibernateConstraintValidatorContext.class);
             messageParams.forEach(hibernateContext::addMessageParameter);
         }
         context.buildConstraintViolationWithTemplate(message).addConstraintViolation();
+    }
+
+    private static String interpolateMessage(String message, Map<String, Object> messageParams) {
+        // Use a minimal Message Interpolator for our purposes.
+        // We only use a template and parameters; so it is (reasonably) safe to pass nulls, but put in a try {..} catch() block to be sure.
+        // Tests, both programmatic, and real did not reveal any issue but let's not tempt an RTE when live!
+        MessageInterpolator interpolator = new ParameterMessageInterpolator();
+        MessageInterpolatorContext ic = new MessageInterpolatorContext(null, null, null, null, messageParams, Collections.emptyMap(), ExpressionLanguageFeatureLevel.DEFAULT, false);
+        try {
+            return interpolator.interpolate(message, ic);
+        } catch (Exception e) {
+            return message;
+        }
     }
 }
